--- a/P1/src/thank_you_application.html
+++ b/P1/src/thank_you_application.html
@@ -59,7 +59,7 @@
                 <ul
                     class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-50 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0">
                     <li>
-                        <a href="./main.html"
+                        <a href="main/main.html"
                             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:bg-transparent md:bg-gray-100 md:p-0"
                             aria-current="page">Home</a>
                     </li>
@@ -100,12 +100,11 @@
             </a>
         </div>
 
-
         <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 m-5"
             aria-label="Breadcrumb">
-            <ol class="inline-flex items-center space-x-1 md:space-x-3">
+            <ol class="inline-flex items-center space-x-1 md:space-x-3 justify-start">
                 <li class="inline-flex items-center">
-                    <a href="main_after_login.html"
+                    <a href="main/main_after_login.html"
                         class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
                         <svg class="w-3 h-3 mr-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="currentColor" viewBox="0 0 20 20">
@@ -129,6 +128,8 @@
                 </li>
             </ol>
         </nav>
+
+
 
         <div class="flex items-center justify-center">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -169,10 +170,9 @@
         <div class="ml-4 mr-4 mb-4">
             <div class="grid-cols-1 sm:grid md:grid-cols-1 p-4">
                 <button type="button"
-                    class="inline-block rounded border-2 border-primary px-6 pb-[6px] pt-2 mb-2 text-xs font-large uppercase leading-normal text-primary transition duration-150 ease-in-out hover:border-primary-600 hover:bg-neutral-500 hover:bg-opacity-10 hover:text-primary-600 focus:border-primary-600 focus:text-primary-600 focus:outline-none focus:ring-0 active:border-primary-700 active:text-primary-700 dark:hover:bg-neutral-100 dark:hover:bg-opacity-10"
-                    style="height: fit-content;" data-te-ripple-init id="liveChatButton">
-                    Open Chat
-                </button>
+                    class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800"
+                    style="height: fit-content;" data-te-ripple-init id="liveChatButton">Open
+                    Chat</button>
                 <section id="chatbox" class="hidden">
                     <div class="container">
                         <div class="bg-gray-200 rounded-lg">
@@ -214,7 +214,8 @@
                                 <div></div>
                                 <div class="flex items-start mb-4">
                                     <div class="ml-auto">
-                                        <p class="bg-gray-300 p-2 rounded-lg max-w-xs break-words m-2">Could you provide
+                                        <p class="bg-gray-300 p-2 rounded-lg max-w-xs break-words m-2">Could you
+                                            provide
                                             a
                                             medical detail of your current pet?
                                         </p>
@@ -283,8 +284,8 @@
                                         class="mt-1 p-2 w-full border rounded-md" value="DunDun" readonly>
                                 </div>
 
-                                <label for="owner_name" class="mt-1 p-2 block font-bold text-gray-700">Your Name:<span
-                                        class="text-red-500">*</span></label>
+                                <label for="owner_name" class="mt-1 p-2 block font-bold text-gray-700">Your
+                                    Name:<span class="text-red-500">*</span></label>
                                 <div class="mb-4">
                                     <input type="text" id="owner_name" name="owner_name"
                                         class="mt-1 p-2 w-full border rounded-md" value="Sean Song" readonly>
@@ -334,7 +335,8 @@
                                     </div>
                                 </div>
 
-                                <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own any
+                                <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own
+                                    any
                                     pets?<span class="text-red-500">*</span></label>
                                 <div class="mb-4">
                                     <div class="justify-center mb-4">
@@ -356,7 +358,8 @@
 
 
 
-                                <label for="breed" class="mt-1 p-2 block font-bold text-gray-700">If yes, name the breed
+                                <label for="breed" class="mt-1 p-2 block font-bold text-gray-700">If yes, name the
+                                    breed
                                     and age.</label>
                                 <div class="mb-4">
                                     <textarea type="breed" id="breed" name="breed"
@@ -366,7 +369,8 @@
                                 </div>
 
 
-                                <label for="past_pet" class="mt-1 p-2 block font-bold text-gray-700">Have you had a pet
+                                <label for="past_pet" class="mt-1 p-2 block font-bold text-gray-700">Have you had a
+                                    pet
                                     in
                                     the
                                     past?
@@ -377,7 +381,8 @@
                                         readonly>This will be my second pet after my Golden Retriever. I have had my Retriever for 2 years.</textarea>
                                 </div>
 
-                                <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own or
+                                <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own
+                                    or
                                     rent
                                     your
                                     home?<span class="text-red-500">*</span></label>
@@ -403,14 +408,16 @@
 
                             <div class="flex justify-start mb-10">
                                 <input type="checkbox" class="form-checkbox text-indigo-600 mr-3" checked disabled>
-                                <p class="input-left-text" required>I have read and agree to the terms and conditions.
+                                <p class="input-left-text" required>I have read and agree to the terms and
+                                    conditions.
                                 </p>
                             </div>
 
                             <div class="flex justify-start mb-20">
                                 <ul>
                                     <li class="font-bold">
-                                        By clicking the submit button, I verify all of the above information is true and
+                                        By clicking the submit button, I verify all of the above information is true
+                                        and
                                         accurate.
                                     </li>
                                 </ul>
@@ -432,9 +439,8 @@
                 </section>
                 <div class="grid-cols-1 sm:grid md:grid-cols-1 gap-4 ml-80 mr-80 mb-10">
                     <button type="button"
-                        class="inline-block rounded bg-danger px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#dc4c64] transition duration-150 ease-in-out hover:bg-danger-600 hover:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.3),0_4px_18px_0_rgba(220,76,100,0.2)] focus:bg-danger-600 focus:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.3),0_4px_18px_0_rgba(220,76,100,0.2)] focus:outline-none focus:ring-0 active:bg-danger-700 active:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.3),0_4px_18px_0_rgba(220,76,100,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(220,76,100,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.2),0_4px_18px_0_rgba(220,76,100,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.2),0_4px_18px_0_rgba(220,76,100,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.2),0_4px_18px_0_rgba(220,76,100,0.1)]">
-                        Withdraw Application
-                    </button>
+                        class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Withdraw
+                        Application</button>
                 </div>
             </div>
         </div>
