--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -86,7 +86,7 @@
                 <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
                     <img src="resources/shelter/shelter_logo.png">
                 </div>
-                <h1 class="text-5xl w-min md:w-auto">Toronto Adoption Center</h1>
+                <h1 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl">Toronto Adoption Center</h1>
                 <div class="relative self-start ml-1">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
