--- a/P1/src/list_seeker_applications.html
+++ b/P1/src/list_seeker_applications.html
@@ -19,7 +19,7 @@
 
 
 
-    <div class="min-h-screen bg-gray-100">
+    <div class="min-h-screen bg-gray-100 my-4">
         <!-- Some hacky flex boxing -->
         <div class="flex justify-center mx-4">
             <div class="flex flex-col content-center   w-full md:w-3/4 lg:w-1/2">
@@ -86,9 +86,9 @@
 
                     </li>
                 </ul>
+                        </div>
             </div>
         </div>
-    </div>
     </div>
     <div data-popover id="popover-default" role="tooltip" class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
         <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
