--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -129,7 +129,7 @@
     <h2 class="text-5xl mt-3 mb-1 p-2">My Pets</h2>
     <!-- <h2 class="pb-3">Create lasting memories with a new loving companion!</h2> -->
 
-    <section id="shelter-pets" class="w-full p-3">
+    <section id="shelter-pets" class="flex justify-center w-full p-4">
         <div class="flex flex-col md:flex-row m-4 container md:max-w-full  bg-white rounded-lg shadow-md gap-4">
             <!-- TODO not collapsed by default when screen size is at least medium -->
             <div id="drawer-disabled-backdrop" class="hidden flex z-40 p-4 w-full md:w-[300px] flex-none
