--- a/P1/src/search_filter.html
+++ b/P1/src/search_filter.html
@@ -26,15 +26,13 @@
                 <div class="w-full max-w-xs sm:max-w-2xl">
                     <form>
                         <div class="flex">
-                            <button id="dropdown-button" data-dropdown-toggle="dropdown" class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600" type="button">All species <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <button id="dropdown-button" data-dropdown-toggle="dropdown" class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600" type="button">Dogs <svg class="w-2.5 h-2.5 ml-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
                                 </svg></button>
                             <div id="dropdown" class="z-50 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
                                 <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button">
                                     <li>
-                                        <a href="search_filter.html">
-                                                 <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dogs</button>
-                                        </a>
+                                        <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dogs</button>
                                     </li>
                                     <li>
                                         <button type="button" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Cats</button>
@@ -260,35 +258,6 @@
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
                             December 28, 2022 </p>
-                    </div>
-                </div>
-
-                <!-- Card 3 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
-                            transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                    <a href="./pet_detail.html">
-                        <div class="relative w-full h-56">
-                            <img class="w-full h-full object-cover rounded-t-lg"
-                                src="./resources/pets/cat.jpg" alt="" />
-                        </div>
-                    </a>
-                    <div class="p-5 flex flex-col">
-                        <div class="flex justify-between">
-                            <a href="#">
-                                <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Betsy</h5>
-                            </a>
-                            <div>
-                                <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
-                            </div>
-                        </div>
-                        <p class="text-medium text-gray-700">
-                            Male &#8226 3 years </p>
-                        <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
-                        <p class="text-medium text-gray-700">
-                            Toronto Adoption Center </p>
-                        <p class="text-xs mt-2  text-gray-700">
-                            December 29, 2022 </p>
                     </div>
                 </div>
 
