--- a/P1/src/shelter_update.html
+++ b/P1/src/shelter_update.html
@@ -107,7 +107,7 @@
                                 <!-- when get rid of the a tag inside button, will not proceed to main after login -->
                             </button>
                             <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-1/2 px-5 py-2.5 text-center">
-                                <a href="#">Update</a> 
+                                <a href="./shelter_update_error.html">Update</a>
                                 <!-- when get rid of the a tag inside button, will not proceed to main after login -->
                             </button>
                         </div>
